screencast: Set KStatusNotifierItem::isMenu

This way plasmashell will show the menu on left click and we dont
have to do it ourselves.
BUG: 502019
FIXED-IN: 6.4